--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     </head>
     <body>
-        <div class="container">
-            <form class="form-signin" action = "login.php" method = "POST">
-                <h2 class="form-signin-heading">Easel</h2>
-                <label for="inputName" class="sr-only">Email address</label>
-                <input id="inputName" class="form-control" placeholder="Name" required="" autofocus="" type="name">
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input id="inputPassword" class="form-control" placeholder="Password" required="" type="password">
-                <div class="checkbox">
-                    <label>
-                        <input value="remember-me" type="checkbox"> Remember me
-                    </label>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Easel</a>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-            </form>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-md-offset-4">
+                    <h1 class="text-center login-title">Sign in to take your exams</h1>
+                    <div class="account-wall">
+                        <form class="form-signin" action="login.php" method="post">
+                        <input type="text" class="form-control" placeholder="Email" required autofocus>
+                        <input type="password" class="form-control" placeholder="Password" required>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                        </form>
+                    </div>
+                    <a href="#" class="text-center new-account">Create an account </a>
+                </div>
+            </div>
         </div>
 
         <script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
